--- a/src/main/resources/static/login.html
+++ b/src/main/resources/static/login.html
@@ -3,12 +3,11 @@
 
 <head>
     <meta charset="UTF-8">
-    <link rel="icon" type="image/x-icon" href="#"/>
-    <link type="text/css" rel="styleSheet" href="css/main.css"/>
+    <link rel="shortcut icon" type="image/x-icon" href="https://image.hjljy.cn/favicon/favicon.ico"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>账号登录</title>
     <style>
-        * {
+        *{
             margin: 0;
             padding: 0;
         }
@@ -18,16 +17,10 @@
             height: 100%;
         }
 
-        @font-face {
-            font-family: 'neo';
-            src: url("/fonts/NEOTERICc.ttf");
-        }
-
-        input:focus {
+        input:focus{
             outline: none;
         }
-
-        .form input {
+        .form input{
             width: 300px;
             height: 30px;
             font-size: 18px;
@@ -37,37 +30,32 @@
             color: #fff;
             margin-bottom: 20px;
         }
-
-        .form input::placeholder {
-            color: rgba(255, 255, 255, 0.8);
+        .form input::placeholder{
+            color: rgba(255,255,255,0.8);
             font-size: 18px;
             font-family: "neo";
         }
-
-        .confirm {
+        .confirm{
             height: 0;
             overflow: hidden;
             transition: .25s;
         }
-
-        .btn {
-            width: 140px;
+        .btn{
+            width:140px;
             height: 40px;
             border: 1px solid #fff;
             background: none;
-            font-size: 20px;
+            font-size:20px;
             color: #fff;
             cursor: pointer;
             margin-top: 25px;
             font-family: "neo";
             transition: .25s;
         }
-
-        .btn:hover {
-            background: rgba(255, 255, 255, .25);
+        .btn:hover{
+            background: rgba(255,255,255,.25);
         }
-
-        #login_wrap {
+        #login_wrap{
             width: 980px;
             min-height: 500px;
             border-radius: 10px;
@@ -80,17 +68,15 @@
             margin-top: -250px;
             margin-right: -490px;
         }
-
-        #login {
+        #login{
             width: 50%;
             height: 100%;
             min-height: 500px;
-            background: linear-gradient(45deg, #447a9a, #e06267);
+            background: linear-gradient(45deg, #9a444e, #e06267);
             position: relative;
             float: right;
         }
-
-        #login #status {
+        #login #status{
             width: 90px;
             height: 35px;
             margin: 40px auto;
@@ -100,14 +86,12 @@
             position: relative;
             overflow: hidden;
         }
-
-        #login #status i {
+        #login #status i{
             font-style: normal;
             position: absolute;
             transition: .5s
         }
-
-        #login span {
+        #login span{
             text-align: center;
             position: absolute;
             left: 50%;
@@ -115,158 +99,135 @@
             top: 52%;
             margin-top: -140px;
         }
-
-        #login span a {
+        #login span a{
             text-decoration: none;
             color: #fff;
             display: block;
             margin-top: 80px;
             font-size: 18px;
         }
-
-        #bg {
+        #bg{
             background: linear-gradient(45deg, #d3d3d3, #d3d3d3);
             height: 100%;
         }
-
         /*绘图*/
-        #login_img {
+        #login_img{
             width: 50%;
             min-height: 500px;
-            background: linear-gradient(45deg, #d3d3d1, #447a9a);
+            background: linear-gradient(45deg, #221334, #6c3049);
             float: left;
             position: relative;
         }
-
-        #login_img span {
+        #login_img span{
             position: absolute;
             display: block;
         }
-
-        #login_img .circle {
+        #login_img .circle{
             width: 200px;
             height: 200px;
             border-radius: 50%;
-            background-image:url("/MLOG.png") ;
+            background: linear-gradient(45deg, #df5555, #ef907a);
             top: 70px;
             left: 50%;
             margin-left: -100px;
             overflow: hidden;
         }
-
-        #login_img .circle span {
+        #login_img .circle span{
             width: 150px;
             height: 40px;
             border-radius: 50px;
             position: absolute;
         }
-
-        #login_img .circle span:nth-child(1) {
+        #login_img .circle span:nth-child(1){
             top: 30px;
             left: -38px;
             background: #c55c59;
         }
-
-        #login_img .circle span:nth-child(2) {
+        #login_img .circle span:nth-child(2){
             bottom: 20px;
             right: -35px;
             background: #934555;
         }
-
-        #login_img .star span {
-            background: radial-gradient(#fff 10%, #fff 20%, rgba(72, 34, 64, 0));
+        #login_img .star span{
+            background: radial-gradient(#fff 10%,#fff 20%,rgba(72, 34, 64, 0));
             border-radius: 50%;
             box-shadow: 0 0 7px #fff;
         }
-
-        #login_img .star span:nth-child(1) {
+        #login_img .star span:nth-child(1){
             width: 15px;
             height: 15px;
             top: 50px;
             left: 30px;
         }
-
-        #login_img .star span:nth-child(2) {
+        #login_img .star span:nth-child(2){
             width: 10px;
             height: 10px;
             left: 360px;
             top: 80px;
         }
-
-        #login_img .star span:nth-child(3) {
+        #login_img .star span:nth-child(3){
             width: 5px;
             height: 5px;
             top: 400px;
             left: 80px;
         }
-
-        #login_img .star span:nth-child(4) {
+        #login_img .star span:nth-child(4){
             width: 8px;
             height: 8px;
             top: 240px;
             left: 60px;
         }
-
-        #login_img .star span:nth-child(5) {
+        #login_img .star span:nth-child(5){
             width: 4px;
             height: 4px;
             top: 20px;
             left: 200px;
         }
-
-        #login_img .star span:nth-child(6) {
+        #login_img .star span:nth-child(6){
             width: 4px;
             height: 4px;
             top: 460px;
             left: 410px;
         }
-
-        #login_img .star span:nth-child(7) {
+        #login_img .star span:nth-child(7){
             width: 6px;
             height: 6px;
             top: 250px;
             left: 350px;
         }
-
-        #login_img .fly_star span {
+        #login_img .fly_star span{
             width: 90px;
             height: 3px;
-            background: -webkit-linear-gradient(left, rgba(255, 255, 255, 0.67), rgba(255, 255, 255, 0));
-            background: -o-linear-gradient(left, rgba(255, 255, 255, 0.67), rgba(255, 255, 255, 0));
-            background: linear-gradient(to right, rgba(255, 255, 255, 0.67), rgba(255, 255, 255, 0));
+            background: -webkit-linear-gradient(left, rgba(255, 255, 255, 0.67), rgba(255,255,255,0));
+            background: -o-linear-gradient(left, rgba(255, 255, 255, 0.67), rgba(255,255,255,0));
+            background: linear-gradient(to right, rgba(255, 255, 255, 0.67), rgba(255,255,255,0));
             transform: rotate(-45deg);
         }
-
-        #login_img .fly_star span:nth-child(1) {
-            top: 60px;
+        #login_img .fly_star span:nth-child(1){
+            top:60px;
             left: 80px;
         }
-
-        #login_img .fly_star span:nth-child(2) {
+        #login_img .fly_star span:nth-child(2){
             top: 210px;
             left: 332px;
             opacity: 0.6;
         }
-
-        #login_img p {
+        #login_img p{
             text-align: center;
             color: #af4b55;
             font-weight: 600;
             margin-top: 365px;
             font-size: 25px;
         }
-
-        #login_img p i {
+        #login_img p i{
             font-style: normal;
             margin-right: 45px;
         }
-
-        #login_img p i:nth-last-child(1) {
+        #login_img p i:nth-last-child(1){
             margin-right: 0;
         }
-
         /*提示*/
-        #hint {
+        #hint{
             width: 100%;
             line-height: 70px;
             background: linear-gradient(-90deg, #9b494d, #bf5853);
@@ -281,44 +242,36 @@
             top: 0;
             z-index: 999;
         }
-
         /* 响应式 */
-        @media screen and (max-width: 1000px ) {
-            #login_img {
+        @media screen and (max-width:1000px ) {
+            #login_img{
                 display: none;
             }
-
-            #login_wrap {
+            #login_wrap{
                 width: 490px;
                 margin-right: -245px;
             }
-
-            #login {
+            #login{
                 width: 100%;
 
             }
         }
-
-        @media screen and (max-width: 560px ) {
-            #login_wrap {
+        @media screen and (max-width:560px ) {
+            #login_wrap{
                 width: 330px;
                 margin-right: -165px;
             }
-
-            #login span {
+            #login span{
                 margin-left: -125px;
             }
-
-            .form input {
+            .form input{
                 width: 250px;
             }
-
-            .btn {
+            .btn{
                 width: 113px;
             }
         }
-
-        @media screen and (max-width: 345px ) {
+        @media screen and (max-width:345px ) {
             #login_wrap {
                 width: 290px;
                 margin-right: -145px;
@@ -327,7 +280,7 @@
     </style>
 </head>
 <body>
-<div id="bg">
+<div id="bg" onerror="errorImage(this)">
     <div id="hint"><!-- 提示框 -->
         <p>登录失败,请检查账号密码</p>
     </div>
@@ -335,16 +288,16 @@
         <div id="login"><!-- 登录注册切换动画 -->
             <div id="status">
                 <i style="top: 0">登陆</i>
-                <i style="top: 40px">注册</i>
             </div>
             <span>
                     <form action="post">
-                        <p class="form"><input type="text" id="user" placeholder="username"></p>
-                        <p class="form"><input type="password" id="passwd" placeholder="password"></p>
-                        <p class="form confirm"><input type="password" id="confirm-passwd"
-                                                       placeholder="confirm password"></p>
+                        <p class="form"><label for="user"></label><input type="text" id="user"
+                                                                         placeholder="username"></p>
+                        <p class="form"><label for="passwd"></label><input type="password" id="passwd"
+                                                                           placeholder="password"></p>
+
                         <input type="button" value="Log in" class="btn" onclick="login()" style="margin-right: 20px;">
-                        <input type="button" value="Sign in" class="btn" onclick='signin()' id="btn">
+
                     </form>
                     <a href="#">Forget your password?</a>
                 </span>
@@ -365,9 +318,22 @@
                     <span></span>
                     <span></span>
                     <span></span>
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                    <span></span>
                 </span>
             <span class="fly_star">
                     <span></span>
+                <span></span>
+                 <span></span>
+                 <span></span>
+                <span></span>
                     <span></span>
                     <span></span>
                     <span></span>
@@ -380,13 +346,13 @@
 <script>
     var onoff = true//根据此布尔值判断当前为注册状态还是登录状态
     var confirm = document.getElementsByClassName("confirm")[0]
-    //var user = document.getElementById("user")
-    //var passwd = document.getElementById("passwd")
-    //var con_pass = document.getElementById("confirm-passwd")
+    var user = document.getElementById("user")
+    var passwd = document.getElementById("passwd")
+    var con_pass = document.getElementById("confirm-passwd")
 
     //自动居中title
     var name_c = document.getElementById("title")
-    name=name_c.innerHTML.split("");
+    name = name_c.innerHTML.split("");
     name_c.innerHTML = ""
     for (i = 0; i < name.length; i++)
         if (name[i] != ",")
@@ -400,6 +366,11 @@
         setTimeout("document.getElementById(\"hint\").style.opacity = 0", 2000);
     }
 
+    function errorImage(document) {
+        alert(111)
+        console.error(1111)
+    }
+
     //回调函数
     function submit(callback) {
         //if (passwd.value == con_pass.value) {
@@ -407,9 +378,9 @@
         let url = ""
         request.open("post", url, true)
         let data = new FormData()
-        data.append("email", user.value)
+        data.append("username", user.value)
         data.append("password", passwd.value)
-        request.onreadystatechange = function() {
+        request.onreadystatechange = function () {
             if (this.readyState == 4) {
                 callback.call(this, this.response)
                 //console.log(this.responseText)
@@ -417,6 +388,7 @@
         }
         request.send(data)
     }
+
     //注册按钮
     function signin() {
         let status = document.getElementById("status").getElementsByTagName("i")
@@ -436,7 +408,7 @@
             else if (passwd.value != con_pass.value)
                 hit.innerHTML = "两次密码不相等"
             else if (passwd.value = con_pass.value) {
-                submit(function(res) {
+                submit(function (res) {
                     if (res == "exist")
                         hit.innerHTML = "该账号已存在"
                     else if (res == true) {
@@ -449,6 +421,7 @@
             hint()
         }
     }
+
     //登录按钮
     function login(callback) {
         if (onoff) {
@@ -456,16 +429,16 @@
             let url = "/login"
             request.open("post", url, true)
             let data = new FormData();
-            data.append("email", user.value);
+            data.append("username", user.value);
             data.append("password", passwd.value)
-            request.onreadystatechange = function() {
+            request.onreadystatechange = function () {
                 if (this.readyState == 4) {
-                   let result= JSON.parse(this.responseText);
-                   if(result.code==0){
-                       window.location.href=result.data;
-                   }else{
-                       hint();
-                   }
+                    let result = JSON.parse(this.responseText);
+                    if (result.code == 0) {
+                        window.location.href = "/admin/index";
+                    } else {
+                        hint();
+                    }
 
                 }
             }
